--- a/tab/app.html
+++ b/tab/app.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" type="text/css" href="app.css" />
     </head>
     <body>
+        <h1 class="bird-title"></h1> <!-- Tytuł -->
         <img class="cat" alt="🐈 Cat" async loading="lazy" />
         <script src="app.js" type="module"></script>
     </body>
