switch from cat images to macaulay library bird iframes

--- a/tab/app.html
+++ b/tab/app.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1 class="bird-title"></h1> <!-- Tytuł -->
-        <img class="cat" alt="🐈 Cat" async loading="lazy" />
+        <div class="cat"></div> <!-- Container for the iframe -->
         <script src="app.js" type="module"></script>
     </body>
 </html>
