expanded list of images

--- a/tab/app.html
+++ b/tab/app.html
@@ -2,13 +2,15 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Cat Tab</title>
+        <title>Pigeoncote</title>
         <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1" />
         <link rel="stylesheet" type="text/css" href="app.css" />
     </head>
     <body>
-        <h1 class="bird-title"></h1> <!-- Tytuł -->
-        <div class="cat"></div> <!-- Container for the iframe -->
+        <div class="bird-title-container">
+            <h1 class="bird-title"></h1>
+          </div>
+        <div class="cat"></div>
         <script src="app.js" type="module"></script>
     </body>
 </html>
